--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,14 @@
         <li>Milk</li>
     </ul>
 
+    <p>Print person name</p>
+    <div id="output"></div>
+
+    <script src="bundle.js"></script>
+    <script>
+        // Access the variable defined in script.js
+        document.getElementById('output').textContent = personOne.name;
+    </script>
+
 </body>
 </html>
